--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "OldLondonDB";
-    src: url("./font/OldLondonDB.ttf");
+    src: url("../font/OldLondonDB.ttf");
   }
 
   * {
