--- a/css/common.css
+++ b/css/common.css
@@ -1,64 +1,83 @@
 @font-face {
-    font-family: "OldLondonDB";
-    src: url("../font/OldLondonDB.ttf");
-  }
+  /* font-family: "OldLondonDB";
+  src: url("../font/OldLondonDB.ttf"); */
+}
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "OldLondonDB";
-  }
-  html,body {
-    width: 100%;
-    height: 100%;
-  }
-  .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .section {
-    position: relative;
-    max-width: 350px;
-    width: calc(100% - 30px);
-  }
-  .section img {
-    width: 100%;
-    /* height: 100%; */
-    /* object-fit: none; */
-    /* filter: brightness(0.9); */
-  }
-  .section img:hover {
-    filter: brightness(1);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "OldLondonDB";
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 
-  }
-  .img__content {
-    width: 100%;
-    text-align: center;
-  }
-  .section .text__content {
-    position: absolute;
-    top: 1%;
-    left: 50%;
-    transform: translate(-50%,0%);
-  }
+.container {
+  width: 100%;
+  height: 100%;
+}
+.section {
+  width: 100%;
+  height: auto;
+  margin-bottom: 50px;
+}
+.section .main-img-wrap {
+  width: 100%;
+  padding: 5px;
+  max-width: 300px;
+  margin: 0 auto;
+}
 
-  .section .text__content p {
-    font-size: 16px;
-    color: yellow;
-    cursor: pointer;
-  }
+.section .main-img-wrap.reset {
+  width: 100%;
+  padding: 5px;
+  max-width: initial;
+  margin: 0 auto;
+  position: relative;
+}
+.section .main-img-wrap.postion-a {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+}
+.section .main-img-wrap img {
+  width: 100%;
+}
 
-  .link__box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 4px;
-  }
-  .link__box p {
-    font-size: 11px;
-    cursor: pointer;
-  }
+.section .main_sub_text_wrap > p {
+  text-align: right;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grid {
+  display: grid;
+  width: calc(100% - 10px);
+  grid-template-columns: repeat(3, minmax(calc(33.3333% - 10px), auto));
+  gap: 0px 0px;
+  margin: 0 auto;
+}
