--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,16 @@
 @font-face {
-  /* font-family: "OldLondonDB";
-  src: url("../font/OldLondonDB.ttf"); */
+  font-family: "GowunDodum-Regular";
+  src: url("https://cdn.salondeletter.com/cdn/font/GowunDodum-Regular.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: "GowunDodum-Regular";
 }
 html,
 body {
@@ -15,12 +18,19 @@ body {
   height: 100%;
 }
 .title {
-  text-align: center;
+  text-align: left;
+  font-size: 16.875px;
+  margin-bottom: 20px;
+  color: rgb(207, 143, 150);
+  font-weight: 600;
+  display: none;
 }
 /* #f4cce0 */
 .container {
   width: 100%;
   height: 100%;
+  max-width: 420px;
+  margin: 0 auto;
 }
 .mt37 {
   margin-top: 37px;
@@ -77,6 +87,18 @@ body {
   text-align: right;
 }
 
+.line_heigh1 {
+  line-height: 1;
+}
+
+.line_height_17 {
+  line-height: 1.7;
+}
+
+.text_align_center {
+  text-align: center;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -104,7 +126,16 @@ body {
 .grid {
   display: grid;
   width: calc(100% - 10px);
-  grid-template-columns: repeat(3, minmax(calc(33.3333% - 10px), auto));
+
+  grid-template-columns: repeat(3, 1fr);
   gap: 0px 0px;
   margin: 0 auto;
+}
+
+.grid img {
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+}
+.text_areas > p {
+  font-size: 14.25px;
 }
