--- a/css/common.css
+++ b/css/common.css
@@ -15,8 +15,15 @@
 html,
 body {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
+
+a {
+  color: #333;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .title {
   text-align: left;
   font-size: 16.875px;
@@ -28,7 +35,7 @@ body {
 /* #f4cce0 */
 .container {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   max-width: 420px;
   margin: 0 auto;
 }
@@ -119,8 +126,6 @@ body {
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .grid {
@@ -138,4 +143,110 @@ body {
 }
 .text_areas > p {
   font-size: 14.25px;
+}
+
+/* 기본 스타일 */
+.account_wrap {
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.account_box {
+  background-color: #f8f9fa;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+}
+
+.account_box i {
+  font-size: 1.2em;
+  transition: transform 0.2s;
+}
+
+.account_box:hover {
+  background-color: #e9ecef;
+}
+
+.account_list {
+  display: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.account_list li {
+  padding: 10px 15px;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.account_list li:last-child {
+  border-bottom: none;
+}
+
+.left_box h4 {
+  margin: 0 0 5px;
+  font-size: 1rem;
+}
+
+.left_box .acc_num {
+  font-size: 0.9rem;
+  /* font-weight: bold; */
+  color: #333;
+}
+
+.left_box .acc_name span {
+  display: block;
+  font-size: 0.8rem;
+  color: #555;
+  margin-left: 7px;
+}
+.right_box {
+  display: flex;
+  flex-direction: column;
+}
+.right_box .s_btn {
+  font-size: 0.8rem;
+  /* color: #007bff; */
+  text-decoration: none;
+}
+.right_box .s_btn:nth-child(2) {
+  font-size: 0.8rem;
+  color: #007bff;
+  text-decoration: none;
+  /* margin-left: 10px; */
+}
+.right_box .s_btn:hover {
+  text-decoration: underline;
+}
+
+.right_box .kakao_btn {
+  background-image: url(/image/pay.png);
+  background-position: center;
+  background-size: 75%;
+  background-color: #f9eb37;
+  background-repeat: no-repeat;
+  color: transparent !important;
+  border: none;
+}
+.right_box a:first-child {
+  margin-bottom: 5px;
+  border: 1px solid #d0d2d5;
+}
+.s_btn {
+  display: inline-block;
+  padding: 5px 20px;
+  border-radius: 4px;
+  border: 1px solid #d2d2d2;
+  font-size: 13.5px;
+  color: #5d5d5d;
+  box-shadow: 2px 2px 3px -1px rgba(0, 0, 0, 0.1);
 }
