--- a/css/common.css
+++ b/css/common.css
@@ -250,3 +250,9 @@ a {
   color: #5d5d5d;
   box-shadow: 2px 2px 3px -1px rgba(0, 0, 0, 0.1);
 }
+
+.section.last {
+  width: calc(100% - 18px);
+  height: auto;
+  margin: 0 auto 50px;
+}
