--- a/css/common.css
+++ b/css/common.css
@@ -68,7 +68,7 @@ a {
 }
 
 .section .main-img-wrap.reset > img {
-  max-width: 371px;
+  max-width: 321px;
   width: 100%;
   margin: 0 auto;
 }
@@ -272,7 +272,8 @@ a {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin: 20px 0 150px;
+  margin: 20px auto 150px;
+  width: calc(100% - 18px);
 }
 .name_box .tel_wrap2 {
   display: flex;
