--- a/css/common.css
+++ b/css/common.css
@@ -14,8 +14,52 @@
 }
 html,
 body {
+  scroll-behavior: smooth;
   width: 100%;
   /* height: 100%; */
+}
+.header {
+  position: fixed;
+  top: -60px;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  z-index: 1000;
+  transition: top 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 스크롤 시 나타나는 헤더 */
+.header.visible {
+  top: 0;
+}
+
+.music-controls {
+  position: absolute;
+  right: 8px;
+}
+
+.volume-button {
+  background: none;
+  border: none;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+.volume-button:focus {
+  outline: none;
+}
+
+.volume-button:hover {
+  transform: scale(1.1);
 }
 
 a {
@@ -42,6 +86,7 @@ a {
   /* height: 100%; */
   max-width: 420px;
   margin: 0 auto;
+  position: relative;
 }
 .mt37 {
   margin-top: 37px;
@@ -274,7 +319,10 @@ a {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 20px auto 150px;
-  width: calc(100% - 18px);
+  width: calc(100% - 39px);
+}
+.name_box {
+  font-size: 13.6px;
 }
 .name_box .tel_wrap2 {
   display: flex;
@@ -357,7 +405,7 @@ a {
 .relation_list {
   width: 45%;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 13.6px;
 }
 
 .relation_list .parents {
@@ -404,7 +452,37 @@ a {
     width: 100%;
   }
 } */
+/* Top 버튼 스타일 */
+.top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #fff;
+  color: #f4cce0;
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 12px;
+  cursor: pointer;
+  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.2);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
+.footer {
+  position: relative; /* 기본값: static, 필요 시 fixed로 변경 가능 */
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffebf5;
+  color: #333;
+  text-align: center;
+  padding: 20px 10px;
+  font-size: 14px;
+}
 .active {
   transform: rotate(186deg);
 }
