--- a/css/common.css
+++ b/css/common.css
@@ -13,18 +13,25 @@
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: 'BookkGothic-Bd';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/BookkGothic-Bd.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Pretendard-Regular";
+  font-family: "BookkGothic-Bd";
 }
 html,
 body {
   scroll-behavior: smooth;
   width: 100%;
   /* height: 100%; */
+
 }
 .header {
   position: fixed;
@@ -537,6 +544,10 @@ a {
 .dfjs {
   opacity: 1;
   transform: translateY(0);
+}
+
+.font_size15 {
+  font-size: 15px !important;
 }
 @keyframes fall {
   0% {
