--- a/css/common.css
+++ b/css/common.css
@@ -14,17 +14,22 @@
   font-style: normal;
 }
 @font-face {
+  font-family: 'BookkGothic-Lt';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/BookkGothic-Lt.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
   font-family: 'BookkGothic-Bd';
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/BookkGothic-Bd.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "BookkGothic-Bd";
+  font-family: "BookkGothic-Lt";
 }
 html,
 body {
@@ -32,6 +37,9 @@ body {
   width: 100%;
   /* height: 100%; */
 
+}
+.font_weight_bd {
+  font-family: 'BookkGothic-Bd' !important;
 }
 .header {
   position: fixed;
@@ -94,6 +102,8 @@ a {
   color: #f4cce0;
   font-weight: 600;
   text-align: center;
+  font-family: 'BookkGothic-Bd' !important;
+  
 }
 /* #f4cce0 */
 .container {
@@ -548,6 +558,7 @@ a {
 
 .font_size15 {
   font-size: 15px !important;
+  font-family: 'BookkGothic-Bd' !important;
 }
 @keyframes fall {
   0% {
