--- a/css/common.css
+++ b/css/common.css
@@ -535,14 +535,14 @@ a {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #ffebf5;
+  background-color: #fff2f9;
   color: #333;
   text-align: center;
   padding: 20px 10px;
   font-size: 14px;
 }
 .active {
-  transform: rotate(186deg);
+  transform: rotate(180deg);
 }
 
 .star {
@@ -564,17 +564,17 @@ a {
   );
   animation: fall 2s linear infinite;
 }
-/* .hidden {
+.hidden {
   opacity: 0;
   transform: translateY(50px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 .hidden_main {
-  opacity: 0;
-  transform: translateY(-150px);
+  opacity: 1;
+  /* transform: translateY(-150px); */
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-} */
+}
 
 .visible {
   opacity: 1;
@@ -589,6 +589,11 @@ a {
 .font_size15 {
   font-size: 15px !important;
   /* font-family: "BookkGothic-Bd" !important; */
+}
+
+.holder {
+  display: inline-block;
+  margin-bottom: 4px;
 }
 @keyframes fall {
   0% {
