--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "Pretendard-Regular";
   src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
     format("woff");
@@ -18,7 +18,7 @@
     format("woff2");
   font-weight: 700;
   font-style: normal;
-}
+} */
 
 /* 둥근모꼴 */
 
@@ -32,18 +32,27 @@
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: "OnulGitnarae-Regular";
+  src: url("/font/OnulGitnarae-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "MonoplexKR-Regular";
+  font-family: "OnulGitnarae-Regular";
 }
 html,
 body {
   scroll-behavior: smooth;
   width: 100%;
   /* height: 100%; */
+}
+.star_font {
+  font-family: "MonoplexKR-Regular" !important;
 }
 .font_weight_bd {
   /* font-family: "BookkGothic-Bd" !important; */
